# mmsynth

./: CMakeLists.txt  Doxyfile  README.md  README.txt
src/: CMakeLists.txt
src/common/: mdebug.h
src/gui/: CMakeLists.txt  alsaaudio.cpp  alsaaudio.h  alsamidi.cpp  alsamidi.h  audio.cpp  audio.h  jackaudio.cpp  jackaudio.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  midi.cpp  midi.h  midicontrolwidget.h  ui_mainwindow.h
src/gui/widgets/: CMakeLists.txt  mbutton.cpp  mbutton.h  mdial.cpp  mdial.h  mslider.cpp  mslider.h  msurface.cpp  msurface.h  muiloader.cpp  muiloader.h  mwidgetplugins.cpp  mwidgetplugins.h
src/synth/: CMakeLists.txt  midievent.cpp  midievent.h  synth.cpp  synth.h
src/synth/modules/: CMakeLists.txt  adsr.cpp  adsr.h  lfo.cpp  lfo.h  mfilter.cpp  mfilter.h  mfiltertim.cpp  mfiltertim.h  oscillator.cpp  oscillator.h
src/synth/mono1/: CMakeLists.txt  mono1.cpp  mono1.h
src/synth/polybase/: CMakeLists.txt  polybase.cpp  polybase.h
src/synth/sampler/: CMakeLists.txt  sampler.cpp  sampler.h
src/synth/synth4k/: CMakeLists.txt  synth4k.cpp  synth4k.h
src/uis/: CMakeLists.txt  default.ui  mono1.ui  polybase.ui  synth4k.ui  uis.qrc
